--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.3",
+    "@material/react-tab": "^0.15.0",
     "@material/react-tab-bar": "^0.15.0",
     "@material/top-app-bar": "^10.0.0",
     "@testing-library/jest-dom": "^5.11.9",
